@@ -31,6 +31,7 @@ $ -> Language fix or change
  ^ Deprecated JToolBarHelper functions: customX, addNewX, editListX, editHtmlX, editCssX and deleteListX.
  - Removed $hideMenu parameter of JButtonStandard->fetchButton.
  ^ Changed deprecated JToolBarHelper function calls in core components.
+ ^ Replaced JQueryElement toString() method by __toString magic method.
 
 12-Aug-2009 Gergo Erdosi
  ^ Removed legacy code from the .htaccess file.
